Fixing some overflow issues in smaller viewports

--- a/react-ui/src/components/ResourcesSection/resources-section.scss
+++ b/react-ui/src/components/ResourcesSection/resources-section.scss
@@ -1,11 +1,20 @@
 @import '../../variables.scss';
 
+
+$resources-section-breakpoint: 600px;
+
 .resources-section {
     display: flex;
-    justify-content: flex-end;
+    flex-direction: column;
+    align-items: stretch;
     padding: 1em $global-padding-horizontal-small;
     @media(min-width: $global-padding-breakpoint) {
         padding: 1em $global-padding-horizontal-large;
+    }
+    @media(min-width: $resources-section-breakpoint) {
+        flex-wrap: nowrap;
+        flex-direction: row;
+        justify-content: flex-end;
     }
 }
 
@@ -15,13 +24,20 @@
     color: $color-purple;
     border: solid 2px $color-purple;
 
+    margin-bottom: 1em;
+    @media(min-width: $resources-section-breakpoint) {
+        margin-bottom: 0;
+    }
+
     > span {
         display: inline-block;
         padding: 1em;
     }
 
-    &:not(:last-child) {
-        margin-right: 10px;
+    @media(min-width: $resources-section-breakpoint) {
+        &:not(:last-child) {
+            margin-right: 10px;
+        }
     }
 
     &.social {
@@ -35,6 +51,7 @@
 a.resource-box:link, a.resource-box:visited {
     display: flex;
     align-items: center;
+    justify-content: space-between;
 
     .chevron {
         display: flex;
